// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfusionMatrix > does not break on asymetric data 1`] = `
<DocumentFragment>
  <div
    class="flex_f16jawj4 root_fpvit0b"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel_fnlll25"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label2
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            4
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.875); color: rgb(255, 255, 255);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            7
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label1
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            3
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.75); color: rgb(255, 255, 255);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            6
          </td>
        </tr>
        <tr>
          <th
            class="xlabel_fhd09ev"
          />
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel_f1uf2ce"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend_f1s6jfx9"
      style="height: 118.5px;"
    >
      <div
        class="legendNotch_f12km7yd"
        style="top: 0px;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 100%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 80%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 60%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 40%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 20%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders a basic confusion matrix 1`] = `
<DocumentFragment>
  <div
    class="flex_f16jawj4 root_fpvit0b"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel_fnlll25"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label2
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label1
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <th
            class="xlabel_fhd09ev"
          />
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel_f1uf2ce"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend_f1s6jfx9"
      style="height: 177.75px;"
    >
      <div
        class="legendNotch_f12km7yd"
        style="top: 0px;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 100%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 80%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 60%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 40%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 20%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders a small confusion matrix snapshot, with no labels or footer 1`] = `
<DocumentFragment>
  <div
    class="flex_f16jawj4 root_flfw1tb"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="cell_f1nqgcx2"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell_f1nqgcx2"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td
            class="cell_f1nqgcx2"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell_f1nqgcx2"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ConfusionMatrix > renders only one of the given list of configs 1`] = `
<DocumentFragment>
  <div
    class="flex_f16jawj4 root_fpvit0b"
  >
    <table>
      <tbody>
        <tr>
          <td
            class="yAxisLabel_fnlll25"
          >
            test y axis
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label2
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.125); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            1
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.5); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            4
          </td>
        </tr>
        <tr>
          <td>
            <div
              class="ylabel_fx8icwu"
            >
              label1
            </div>
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            0
          </td>
          <td
            class="cell_f1i7lfy8"
            style="background-color: rgba(41, 121, 255, 0.375); color: rgb(0, 0, 0);"
          >
            <div
              class="overlay_fecblze"
              style="opacity: 0;"
            />
            3
          </td>
        </tr>
        <tr>
          <th
            class="xlabel_fhd09ev"
          />
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label1
            </div>
          </th>
          <th>
            <div
              class="xlabel_fhd09ev"
            >
              label2
            </div>
          </th>
          <td
            class="xAxisLabel_f1uf2ce"
          >
            test x axis
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="legend_f1s6jfx9"
      style="height: 177.75px;"
    >
      <div
        class="legendNotch_f12km7yd"
        style="top: 0px;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          8
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 100%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          0
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 80%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          1
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 60%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          3
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 40%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          4
        </span>
      </div>
      <div
        class="legendNotch_f12km7yd"
        style="top: 20%;"
      >
        <span
          class="legendLabel_fvqtnr3"
        >
          6
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
